[gd_scene load_steps=4 format=3 uid="uid://dbnvorb3horw2"]

[ext_resource type="Texture2D" uid="uid://cimqcv02jsv6i" path="res://shared/assets/hub_art/hub_of_hubs/hub__0007_disc1.png" id="1"]
[ext_resource type="Script" uid="uid://hopiqb2rqru2" path="res://shared/ui/hub_of_hubs/intermission_button.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://crb7rwujbjw7u" path="res://shared/ui/hub_of_hubs/focus_target.tscn" id="3"]

[node name="Intermission1" type="TextureButton"]
offset_left = 1748.0
offset_top = 189.0
offset_right = 2114.0
offset_bottom = 535.0
focus_mode = 0
texture_normal = ExtResource("1")
script = ExtResource("2")

[node name="FocusTarget" parent="." instance=ExtResource("3")]
layout_mode = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
